# zlab-py

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zlab/: __init__.py
src/zlab/datasets/: __init__.py  load_iris.py  load_penguins.py
src/zlab/warnings/: __init__.py  warnings.py
src/zlab/zform/: __init__.py  _zform_config.py  _zform_eval_engines.py  _zform_functions_bounds.py  _zform_metadata.py  _zform_metrics.py  _zform_model_bounds.py  zform.py  zform_apply.py  zform_compute_models.py  zform_functions.py  zforms_behaviors.py  zforms_object.py
tests/: forms.csv  test_datasets.py  test_zform.py  test_zform_config.py  test_zform_returns.py  test_zform_verbose.py
tests/zform/unit/: test_behaviors.py  test_config.py  test_custom_functions.py  test_engines.py  test_eval_metrics.py
zlab/: __init__.py  _zform_config.py  _zform_metadata.py  _zform_metrics.py  _zform_model_bounds.py  _zform_model_defaults.py  warnings.py  zform.py  zform_apply.py  zform_classes.py  zform_compute_models.py  zform_functions.py  zforms_behaviors.py  zforms_object.py
